2009-08-16 Frank Kober <goemusic@yahoo.fr>
	* qmidiarp_fr.ts: French translation added

2009-08-16 Guido Scholz <guido.scholz@bayernline.de>
	* arpwidget.cpp: Keyboard shortcuts added for some widgets,
	fixed layout bug, texts made translatable
	* arpscreen.cpp: Obsolete pen.setColor() calls removed, unused C
	header files removed.
	* groovewidget.cpp, logwidget.cpp, passwidget.cpp: Keyboard
	shortcuts added, layout improved, label text made translatable
	* main.cpp: Support for Qt library message translation added
	* configure.ac, main.cpp, src/translations/*.ts: Support for
	application message translation added, German translation added
	
2009-08-15 Frank Kober <goemusic@yahoo.fr>
	* arpscreen.cpp: fixed fall through in switch and unfinished "."
	interpretation, removed resizeEvent(), set font at beginning of
	the drawEvent routine
	* gui.cpp, seqdriver.cpp: fixed queue start issue when no arp is
	present, the queue is now off on program startup and has to be
	enabled manually after addArp or load
	* passwidget.cpp: fixed yet another logic problem with enabling
	MIDI clock
	* seqdriver.cpp: take into account MIDI clock for ArpScreen
	follower line
	
2009-08-13 Guido Scholz <guido.scholz@bayernline.de>
	* package: cleanups, use .qmidiarprc instead of .qmarc
	
2009-08-13 Frank Kober <goemusic@yahoo.fr>
	* package: use xpm icons instead, which are part of sources now and
	EXTRA_DIST
	
2009-08-08 Frank Kober <goemusic@yahoo.fr>
	* package: optimized layout, removed unnecessary QWidgets (gscholz)
	* package: icons are now installed properly in 
	PREFIX/share/qmidiarp/pixmaps by using 
	a gcc ... -D option as defined in icons/Makefile.am
	* 
	* arpwidget.cpp, gui.cpp: pattern preset structure is now saved 
	in a .qmarc file created in the user's home if non-existent.
	* arpwidget.cpp: added 'removePattern' Toolbutton
	* arpwidget.cpp, midiarp.cpp: the mute button is now working by 
	setting all note velocities = 0 when checked